* Site Configuration moved from opencms.properties into opencms-system.xml. * CmsSiteManager changed. * Old WebAppNames now read from opencms-system.xml and stored in RuntimeProperties. * TestSiteConfiguration UnitTest added.